# MACS

./: MACS_implementation.ipynb  README.md  pyproject.toml  stqa_350.json
docs/: index.md
heatmap/: genstep_1_gentoken_Norm.html  genstep_2_gentoken_andy.html  genstep_3_gentoken_ is.html  genstep_4_gentoken_ located.html  genstep_5_gentoken_ in.html  genstep_6_gentoken_ France.html
heatmap/overall/: gen_max_step.html
src/macs/: __init__.py  attention.py  cli.py  config.py  prompting.py  schemas.py  text_pipeline.py  visualization.py  vqa_pipeline.py
